refactor(govdata): apply code quality improvements and remove dead code
Apply IntelliJ code inspection suggestions to improve code quality and maintainability:

Simplifications:
- Use pattern matching for instanceof (JsonNode checks)
- Replace Collections.unmodifiableMap with Map.copyOf
- Use List.getFirst() instead of get(0)
- Use String.repeat() for repeated string concatenation
- Simplify isEmpty() checks (size() > 0 → !isEmpty())

Dead code removal:
- Remove unused ensureParentDirectory method
- Remove unused writeJsonRecords method
- Remove unused loadTableMetadata() no-args overload
- Remove unused IterationDimension.fromYearRange static method
- Remove unused @SuppressWarnings annotations
- Remove unused local variable sourceVars

Documentation/clarity:
- Remove redundant @param Javadoc from functional interfaces (parameters already in method signature)
- Fix typos in comments ("preloaded" not "pre-loaded")
- Improve grammar in comments
- Add assert for non-null cacheManifest

Bug fixes:
- Fix regex pattern in PreparedStatement helpers (was escaping closing brace unnecessarily)

All changes are refactoring-only with no functional impact. Code compiles and maintains
existing behavior while improving readability and following modern Java idioms.

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>